--- a/project1/index.html
+++ b/project1/index.html
@@ -496,12 +496,12 @@
                <option value="Bangladesh">Bangladesh</option>
                <option value="Barbados">Barbados</option>
                <option value="Belarus">Belarus</option>
-               <option value="Belgium">Belgium</option>
+               <option value="Brussels">Belgium</option>
                <option value="Belize">Belize</option>
                <option value="Benin">Benin</option>
                <option value="Bermuda">Bermuda</option>
                <option value="Bhutan">Bhutan</option>
-               <option value="Bolivia">Bolivia</option>
+               <option value="Sucre">Bolivia</option>
                <option value="Bonaire">Bonaire</option>
                <option value="Bosnia & Herzegovina">Bosnia & Herzegovina</option>
                <option value="Botswana">Botswana</option>
